@@ -1,0 +1,5 @@
+
+/* special symbol to mark end of profiling */
+void end_of_profiling(void)
+{
+}
